--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: latest
+          tags: ouwyukha/hello-world:latest
           provenance: false
           sbom: false
           no-cache: true
