--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
             file: ./Dockerfile
             builder: ${{ steps.buildx.outputs.name }}
             push: true
-            tags: ouwyukha/hello-world:latest
+            tags: latest
             provenance: false
             sbom: false
             no-cache: true
