--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up
         uses: docker/setup-buildx-action@v2
       - name: Build with Retry
-        uses: Wandalen/wretry.action@v1.0.36
+        uses: Wandalen/wretry.action@v1.0.36_js_action
         with:
           action: docker/build-push-action@v3
           with: |
