--- a/.github/workflows/build_manual.yml
+++ b/.github/workflows/build_manual.yml
@@ -26,7 +26,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: latest
+          tags: ouwyukha/hello-world:latest
           provenance: false
           sbom: false
           no-cache: true
@@ -40,7 +40,7 @@ jobs:
           file: ./Dockerfile
           builder: ${{ steps.buildx.outputs.name }}
           push: true
-          tags: latest
+          tags: ouwyukha/hello-world:latest
           provenance: false
           sbom: false
           no-cache: true
